[package]
name = "auto"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
snafu = "0.6.8"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }